docs(fix): animation and github corner on mobile

--- a/static/src/css/style.css
+++ b/static/src/css/style.css
@@ -44,7 +44,7 @@
   --code-color: var(--cyan1);
   --code-border-color: var(--cyan1);
   --text-font-size: 16px;
-  --transition-short: 150ms;
+  --transition-short: 250ms;
 }
 
 ::selection {
@@ -407,7 +407,7 @@ body.sticky .sidebar-toggle {
   bottom: 0;
   left: 300px;
   position: absolute;
-  transition: left var(--transition-short) ease;
+  transition: translateX var(--transition-short) ease;
 }
 
 .markdown-section {
@@ -531,19 +531,56 @@ body.close .content {
 }
 
 @media screen and (max-width: 768px) {
-
-  .github-corner,
-  .sidebar,
-  .sidebar-toggle {
+  .sidebar {
     position: fixed;
   }
 
-  .app-nav {
-    margin-top: 16px;
+  .github-corner svg {
+    height: 62px !important;
+    width: 62px !important;
   }
 
-  .app-nav li ul {
-    top: 30px;
+  .sidebar {
+    left: -300px;
+  }
+
+  .sidebar-toggle {
+    cursor: pointer;
+    display: inherit;
+    border: 0;
+    outline: none;
+    padding: 0 10px;
+    left: 6px;
+    transition: opacity 0.3s;
+    z-index: 4;
+    position: fixed;
+    top: 0;
+    height: 62px;
+    width: 100%;
+    background: var(--bg-color);
+  }
+
+  .sidebar-toggle span {
+    background-color: var(--primary-color);
+    display: block;
+    margin-bottom: 5px;
+    width: 24px;
+    height: 3px;
+  }
+
+  body.sidebar-toggle {
+    display: none;
+  }
+
+  body.close .sidebar,
+  body.close .content  {
+    transform: translateX(300px);
+  }
+
+  body.close .sidebar-toggle {
+    background: var(--background-color);
+    transition: background-color 0.3s;
+    width: 284px;
   }
 
   main {
@@ -551,46 +588,12 @@ body.close .content {
     overflow-x: hidden;
   }
 
-  .sidebar {
-    left: -300px;
-  }
-
   .content {
     left: 0;
     max-width: 100vw;
     position: static;
     padding-top: 20px;
-  }
-
-  body.close .sidebar-toggle {
-    background-color: var(--bg-color);
-  }
-
-  .sidebar-toggle {
-    top: 0;
-    bottom: inherit;
-    width: 100%;
-  }
-
-  body.close .sidebar {
-    transform: translateX(300px);
-  }
-
-  body.close .sidebar-toggle {
-    width: 284px;
-  }
-
-  body.close .content {
-    transform: translateX(300px);
-  }
-
-  body.close .app-nav,
-  body.close .github-corner {
-    display: none;
-  }
-
-  .github-corner .octo-arm {
-    animation: a 0.56s ease-in-out;
+    transition: transform 0.25s ease;
   }
 
   .github-corner:hover .octo-arm {
